Closed
Bug 936361
Opened 12 years ago
Closed 12 years ago
Assertion failure: (!property.isOwnProperty(constraints())), at jit/IonBuilder.cpp
Categories
(Core :: JavaScript Engine: JIT, defect)
Tracking
()
RESOLVED
FIXED
mozilla28
People
(Reporter: gkw, Assigned: bhackett1024)
References
Details
(Keywords: assertion, regression, testcase, Whiteboard: [jsbugmon:update])
Attachments
(2 files)
|
1.96 KB,
text/plain
|
Details | |
|
1.71 KB,
patch
|
jandem
:
review+
|
Details | Diff | Splinter Review |
x = ParallelArray([1942], function() {})
x + watch.call(x, "length", (function() {}));
asserts js debug shell on m-c changeset 9cd9aae255b5 with --baseline-eager at Assertion failure: (!property.isOwnProperty(constraints())), at jit/IonBuilder.cpp
Tested with:
https://ftp.mozilla.org/pub/mozilla.org/firefox/tinderbox-builds/mozilla-central-macosx64-debug/1383872900/jsshell-mac64.zip
which I presume is a 64-bit debug non-deterministic threadsafe build.
Updated•12 years ago
|
Whiteboard: [jsbugmon:update,bisect] → [jsbugmon:update]
Comment 1•12 years ago
|
||
JSBugMon: Bisection requested, result:
autoBisect shows this is probably related to the following changeset:
The first bad revision is:
changeset: http://hg.mozilla.org/mozilla-central/rev/f0f6a25259c5
user: Brian Hackett
date: Thu Nov 07 11:12:15 2013 -0800
summary: Bug 935324 - Clean up adding of type properties to objects, r=jandem.
This iteration took 431.904 seconds to run.
| Reporter | ||
Comment 2•12 years ago
|
||
Brian, is bug 935324 a possible regressor?
Blocks: 935324
Flags: needinfo?(bhackett1024)
| Assignee | ||
Comment 3•12 years ago
|
||
The logic for isOwnProperty() went out of phase with the version of it inlined into IonBuilder::objectsHaveCommonPrototype.
Assignee: general → bhackett1024
Attachment #829304 -
Flags: review?(jdemooij)
Flags: needinfo?(bhackett1024)
Updated•12 years ago
|
Attachment #829304 -
Flags: review?(jdemooij) → review+
| Assignee | ||
Comment 4•12 years ago
|
||
| Reporter | ||
Updated•12 years ago
|
Component: JavaScript Engine → JavaScript Engine: JIT
Comment 5•12 years ago
|
||
Status: NEW → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla28
| Reporter | ||
Updated•12 years ago
|
Flags: in-testsuite+
| Assignee | ||
Comment 6•12 years ago
|
||
Followup to update the test to not require ParallelArray (which only exists on nightly):
https://hg.mozilla.org/integration/mozilla-inbound/rev/76a902df4302
Comment 7•12 years ago
|
||
You need to log in
before you can comment on or make changes to this bug.
Description
•