Bug 936361 - Fixup inlined no-freeze version of isOwnProperty, r=jandem.