js/src/jit-test/tests/ion/bug936361.js
@@ -1,0 +1,3 @@
+
+x = ParallelArray([1942], function() {})
+x + watch.call(x, "length", (function() {}));
